# CCHidalgoG-data_eng_init

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
tests/: test_pipeline.py  test_requests
