[tool.poetry]
name = "data-eng-init"
version = "0.1.0"
description = "This is my first data eng repo"
authors = ["cchidalgog <ccamilo.hidalgo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
