[tool.poetry]
name = "data-eng-init"
version = "0.1.0"
description = "This is my first data eng repo"
authors = ["cchidalgog <ccamilo.hidalgo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
requests = "^2.31.0"
pylint = "^3.1.0"
pip-audit = "^2.7.2"
blue = "^0.9.1"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pylint ."
audit = "pip-audit"
format = "isort . && blue ."